--- a/studio1/index.html
+++ b/studio1/index.html
@@ -2,67 +2,80 @@
 <html lang="en">
 
 <head>
-  <meta charset="utf-8">
-   <title>Daria's 157 Portal</title>
-   <link href="style.css" rel="stylesheet">
+  <!--link to the p5 javascript library-->
+  <script src="http://cdnjs.cloudflare.com/ajax/libs/p5.js/0.4.21/p5.js"></script>
+
+    <meta charset="utf-8">
+    <title>Daria's 157 Portal</title>
+    <link href="style.css" rel="stylesheet" type="text/css" />
+
 </head>
 
 <body>
-<a href="../studio1/index.html"><img class="logo" src="images/logo.gif" alt="Daria Taback" width="250" height="190"></a>
+    <header id="mySketch"></header>
 
-<header>
-</header>
+    <aside>
+        <a href="../studio1/index.html"><img src="images/logo.gif" alt="Daria Taback" width="204" height="114"></a>
+        <h1>
+      portal
+    </h1>
+    </aside>
 
-<section>
-  <div id="left-column">
-    <h2>
+
+
+    <main>
+        <div id="left-column">
+            <h2>
       exercises
     </h2>
-    <nav>
-      <ul>
-        <li>Functions <a href="#">1</a> | <a href="#">2</a></li>
-      </ul>
-    </nav>
-    </div>
+            <nav>
+                <ul>
+                    <li>Functions <a href="#">1</a> | <a href="#">2</a></li>
+                </ul>
+            </nav>
+        </div>
 
-    <div id="middle-column">
-      <h2>
+        <div id="middle-column">
+            <h2>
         studios
       </h2>
-      <nav>
-        <ol>
-        <li><a href="../blog/index.html">Blog</a></li>
-        <li><a href="#">Mad Libs 2.0</a></li>
-        <li><a href="#">Pocket full of interface</a></li>
-        <li><a href="#">Time is on my side</a></li>
-        <li><a href="#">The library</a></li>
-        </ol>
-      </nav>
-      </div>
+            <nav>
+                <ol>
+                    <li><a href="../blog/index.html">Blog</a></li>
+                    <li><a href="#">Mad Libs 2.0</a></li>
+                    <li><a href="#">Pocket full of interface</a></li>
+                    <li><a href="#">Time is on my side</a></li>
+                    <li><a href="#">The library</a></li>
+                </ol>
+            </nav>
+        </div>
 
-      <div id="right-column">
-        <h2>
+        <div id="right-column">
+            <h2>
           project
         </h2>
-        <nav>
-        <ul>
-          <li><a href="#">Topic choice</a></li>
-          <li><a href="#">Background research</a></li>
-          <li><a href="#">ISEA proposal</a></li>
-          <li><a href="#">Comparative analysis</a></li>
-          <li><a href="#">Needfinding</a></li>
-          <li><a href="#">Brainstorm, visual research</a></li>
-        </ul>
-      </nav>
+            <nav>
+                <ul>
+                    <li><a href="#">Topic choice</a></li>
+                    <li><a href="#">Background research</a></li>
+                    <li><a href="#">ISEA proposal</a></li>
+                    <li><a href="#">Comparative analysis</a></li>
+                    <li><a href="#">Needfinding</a></li>
+                    <li><a href="#">Brainstorm, visual research</a></li>
+                </ul>
+            </nav>
         </div>
-  </section>
+    </main>
 
-<footer>
-  <a href="http://validator.w3.org/check?uri=referer">Valid HTML 5</a>  |
-  <a href="http://jigsaw.w3.org/css-validator/check/referer">Valid CSS</a> |
-  <a href="mailto:dptaback@ucdavis.edu">Email</a>
-</footer>
+    <footer>
+        <a href="http://validator.w3.org/check?uri=referer">Valid HTML 5</a> |
+        <a href="http://jigsaw.w3.org/css-validator/check/referer">Valid CSS</a> |
+        <a href="mailto:dptaback@ucdavis.edu">Email</a>
+    </footer>
 
+
+    <!--link to custom js file-->
+<script src="script.js"></script>
 
 </body>
 
