--- a/studio1/index.html
+++ b/studio1/index.html
@@ -41,7 +41,7 @@
       </h2>
             <nav>
                 <ol>
-                    <li><a href="blog/index.html">Blog</a></li>
+                    <li><a href="../blog/index.html">Blog</a></li>
                     <li><a href="#">Mad Libs 2.0</a></li>
                     <li><a href="#">Pocket full of interface</a></li>
                     <li><a href="#">Time is on my side</a></li>
