--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 
     <aside>
-        <a href="../studio1/index.html"><img src="images/logo.gif" alt="Daria Taback" width="204" height="114"></a>
+        <a href="index.html"><img src="images/logo.gif" alt="Daria Taback" width="204" height="114"></a>
         <h1>
       portal
     </h1>
