--- a/bookex/looping.html
+++ b/bookex/looping.html
@@ -1,11 +1,10 @@
-
 <!--NOTE: Replace all of the uppercase text from glenda with your own custom content-->
 <!doctype html>
 <html>
 
 <head>
     <meta charset="UTF-8">
-    <title>! ADD A DESCRIPTIVE TITLE HERE...DO NOT FORGET TO UPDATE THIS !</title>
+    <title>Looping Triangle</title>
     <style>
         * {
             margin: 0px;
@@ -27,9 +26,17 @@
 </head>
 
 <body>
-    <h1>! ADD THE CHAPTER NUMBER HERE FOLLOWED BY BRIEF TITLE FOR THE EXERCISE !</h1>
+    <h1>Chapter 2: Looping</h1>
     <h2>open the console to see the results of the script</h2>
     <script>
-        // ADD DESCRIPTIVE COMMENTS BEFORE STATEMENTS AND BLOCK OF CODE
+        // delcare a variable to hold the sequence
+        var sequence = "";
+
+
+        // write a loop with seven calls to the console that adds numbers in the sequence 1, 12, 123
+        for (var i = 1; i <= 7; i = i + 1) {
+          sequence += "#";
+            console.log(sequence);
+        }
     </script>
 </body>
