--- a/index.html
+++ b/index.html
@@ -30,7 +30,6 @@
     </h2>
             <nav>
                 <ul>
-<li>Functions <a href="#">1</a> | <a href="#">2</a></li>
                     <li><a href="bookex/looping.html">Ch 2-Looping</a></li>
                     <li><a href="bookex/minimum.html">Ch 3-Minimum</a></li>
                 </ul>
@@ -58,7 +57,7 @@
         </h2>
             <nav>
                 <ul>
-                    <li><a href="#">Topic choice</a></li>
+                    <li><a href="project/topic.html">Topic</a></li>
                     <li><a href="#">Background research</a></li>
                     <li><a href="#">ISEA proposal</a></li>
                     <li><a href="#">Comparative analysis</a></li>
