--- a/project/topic.html
+++ b/project/topic.html
@@ -32,13 +32,18 @@
             <h2>
       project topic brainstorm: diy, art and technology
     </h2>
-            <img width="600" height="285" src="images/alienwebmd.gif">
+            <a href="http://alienwebmd.com"><img width="600" height="285" src="images/alienwebmd.gif"></a>
             <p>
-              I would like to create an interactive web zine that would come out with bi-monthly issues that express a collective cosciousness about various topics, mediated through the unique and self-referential language and framework of the internet, using gifs, memes, video, prose, popups, essays, and images collaged together. The zine would take content submissions in advance of releasing issues. The zines would address our relationship with internet and technology as they intersect with other contemporary topics such as feminism, politics, and identity. </p>
+                I would like to create an interactive web zine (tentatively called "Alien WebMD") that would come out with bi-monthly issues that express a collective cosciousness about various topics, mediated through the unique and self-referential language and framework
+                of the internet, using gifs, memes, video, prose, popups, essays, and images collaged together. The zine would take content submissions in advance of releasing issues. The zines would address our relationship with internet and technology
+                as they intersect with other contemporary topics such as feminism, politics, and identity. </p>
             <p> Below are some sources of inspiration:</p>
-            <img width="600" height="351" src="images/gifcities.gif">
-            <img width="600" hieght="577" src="images/kiddy.gif">
-            <img width="600" height="335" src="images/gifcollider.gif">
+            <h3>gifCities</h3>
+            <a href="https://gifcities.org/"><img width="600" height="351" src="images/gifcities.gif"></a>
+            <h3>kiddyp00l</h3>
+            <a href="http://kiddyp00l.tumblr.com/"><img width="600" hieght="577" src="images/kiddy.gif"></a>
+            <h3>gif Collider</h3>
+            <a href="http://www.gifcollider.com/"><img width="600" height="335" src="images/gifcollider.gif"></a>
 
 
         </article>
