--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 
 <head>
-  <!--link to the p5 javascript library-->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.4.21/p5.js"></script>
+    <!--link to the p5 javascript library-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.4.21/p5.js"></script>
 
     <meta charset="utf-8">
     <title>Daria's 157 Portal</title>
@@ -21,7 +21,7 @@
     </h1>
     </aside>
 
-  <header id="mySketch"></header>
+    <header id="mySketch"></header>
 
     <main>
         <div id="left-column">
@@ -32,6 +32,9 @@
                 <ul>
                     <li><a href="bookex/looping.html">Ch 2-Looping</a></li>
                     <li><a href="bookex/minimum.html">Ch 3-Minimum</a></li>
+                    <li><a href="#">Ch 13-The Cat's Hat</a></li>
+                    <li><a href="#">Ch 14-Mouse Trail</a></li>
+
                 </ul>
             </nav>
         </div>
@@ -57,18 +60,15 @@
         </h2>
             <nav>
                 <ul>
-                    <li><a href="project/topic.html">Topic</a></li>
-                    <li><a href="#">Background research</a></li>
-                    <li><a href="#">ISEA proposal</a></li>
-                    <li><a href="#">Comparative analysis</a></li>
-                    <li><a href="#">Needfinding</a></li>
-                    <li><a href="#">Brainstorm, visual research</a></li>
+                    <li><a href="project/process/topic.html">Topic brainstorm</a></li>
+                    <li><a href="#">Comparative research</a></li>
                 </ul>
             </nav>
         </div>
     </main>
 
     <footer>
+        <a href="https://github.com/dartab/des157">Github</a> |
         <a href="https://validator.w3.org/check?uri=referer">Valid HTML 5</a> |
         <a href="https://jigsaw.w3.org/css-validator/check/referer">Valid CSS</a> |
         <a href="mailto:dptaback@ucdavis.edu">Email</a>
@@ -76,7 +76,7 @@
 
 
     <!--link to custom js file-->
-<script src="script.js"></script>
+    <script src="script.js"></script>
 
 </body>
 
