--- a/project/process/topic.html
+++ b/project/process/topic.html
@@ -11,7 +11,7 @@
 
     <aside>
 
-        <a href="../index.html"><img src="images/logo.gif" alt="Daria Taback" width="204" height="114"></a>
+        <a href="../../index.html"><img src="images/logo.gif" alt="Daria Taback" width="204" height="114"></a>
         <h1>
       project
     </h1>
@@ -21,7 +21,7 @@
     topic brainstorm
   </h3>
             <ul>
-                <li><a href="../index.html">back to portal</a></li>
+                <li><a href="../../index.html">back to portal</a></li>
             </ul>
         </nav>
 
@@ -50,6 +50,7 @@
     </main>
 
     <footer>
+        <a href="https://github.com/dartab/des157">Github</a> |
         <a href="https://validator.w3.org/check?uri=referer">Valid HTML 5</a> |
         <a href="https://jigsaw.w3.org/css-validator/check/referer">Valid CSS</a> |
         <a href="mailto:dptaback@ucdavis.edu">Email</a>
