--- a/bookex/minimum.html
+++ b/bookex/minimum.html
@@ -1,11 +1,10 @@
-
 <!--NOTE: Replace all of the uppercase text from glenda with your own custom content-->
 <!doctype html>
 <html>
 
 <head>
     <meta charset="UTF-8">
-    <title>! ADD A DESCRIPTIVE TITLE HERE...DO NOT FORGET TO UPDATE THIS !</title>
+    <title>Minimum</title>
     <style>
         * {
             margin: 0px;
@@ -27,9 +26,23 @@
 </head>
 
 <body>
-    <h1>! ADD THE CHAPTER NUMBER HERE FOLLOWED BY BRIEF TITLE FOR THE EXERCISE !</h1>
+    <h1>Chapter 3: Minimum</h1>
     <h2>open the console to see the results of the script</h2>
     <script>
-        // ADD DESCRIPTIVE COMMENTS BEFORE STATEMENTS AND BLOCK OF CODE
+        // delcare variables
+        num1 = 10;
+        num2 = 20;
+
+        // write a function that takes two arguments and returns their minimum
+        function min(num1, num2) {
+            if (num1 < num2)
+                return num1;
+            else if (num2 < num1)
+                return num2;
+        }
+
+        // output to console
+        console.log("the minimum of " + num1 + " and " + num2 + " is: " + min(num1, num2));
+
     </script>
 </body>
