--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <nav>
                 <ul>
                     <li><a href="project/process/topic.html">Topic brainstorm</a></li>
-                    <li><a href="#">Comparative research</a></li>
+                    <li><a href="project/process/comparative.html">Comparative research</a></li>
                 </ul>
             </nav>
         </div>
