--- a/project/process/comparative.html
+++ b/project/process/comparative.html
@@ -38,7 +38,7 @@
                 showcasing the Philadelphia Flower Show. I love the projects showcased on this site, for they are extremely experimental and abstract, with short artist statements that leave much room up to the viewer for interpretation. The issues also
                 make use of media that is distinctly digital, and could not be captured in the traditional xeroxed zine format.</p>
 
-            <img src="images/fungi.gif" width="600" height="206">
+            <img src="images/fungi.gif" alt="fungiculture" width="600" height="206">
             <p><em>Image source: fufufo.com</em></p>
 
             <p><b>Womanzine</b> takes a format that is more along the lines of what I would be interested in creating for my own project. While they have less of a specific mission statement (“WOMANZINE is about/for/not for women. WOMANZINE is too sexy and weird.”)
@@ -47,7 +47,7 @@
                 This zine has dozens of contributors, who are credited below each piece within the issues, and all the content appears original or at least collaged or modified in some way. The overall look for Womanzine, as well as for Fungiculture,
                 is minimalistic, and more or less does not overwhelm the viewer, which is something that I might try to play with in my own work, especially with the unique interaction tools for which Javascript allows.</p>
 
-            <img src="images/womanzine.gif" width="600" height="437">
+            <img src="images/womanzine.gif" alt="womanzine" width="600" height="437">
             <p><em>Image source: toosexyandweird.com</em></p>
 
         </article>
