--- a/studio2/index.html
+++ b/studio2/index.html
@@ -3,13 +3,71 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>DOMContentLoaded template</title>
-    <link href="style.css" rel="stylesheet"/>
+    <title>mansplained</title>
+    <link href="style.css" rel="stylesheet" />
     <script src='script.js' type="text/javascript"></script>
 </head>
 
 <body>
 
+    <header>
+        <h1>
+        mansplained
+        </h1>
+    </header>
+
+    <nav>navigation here! some links and the portal</nav>
+
+    <main>
+
+        <article>
+            <form name="f">
+                <div>
+                    <label>the food your mom made you eat against your will</label>
+                    <input type="text" name="food">
+                </div>
+
+                <div>
+                    <label>your most prized pokemon card</label>
+                    <input type="text" name="pokemon">
+                </div>
+
+                <div>
+                    <label>the sport that you would never excell at</label>
+                    <input type="text" name="sport">
+                </div>
+
+                <div>
+                    <label>your favoite car</label>
+                    <input type="text" name="car">
+                </div>
+
+                <div>
+                    <label>your favoite dave matthews band song</label>
+                    <input type="text" name="song">
+                </div>
+
+                <!--add a div with label and text input with name=userColor-->
+
+                <input type="reset" value="reset" />
+                <input type="submit" value="submit" />
+                <p id="myMsg">
+                </p>
+
+            </form>
+        </article>
+
+
+    </main>
+
+    <aside>
+        a funny picture
+    </aside>
+
+    <footer>
+        <a href="https://validator.w3.org/check?uri=referer">Valid HTML 5</a>
+        <a href="https://jigsaw.w3.org/css-validator/check/referer">Valid CSS</a>
+    </footer>
 </body>
 
 </html>
