--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <header id="mySketch"></header>
 
     <main>
-        <div id="left-column">
+        <div id="left-column" class="column">
             <h2>
       exercises
     </h2>
@@ -39,7 +39,7 @@
             </nav>
         </div>
 
-        <div id="middle-column">
+        <div id="middle-column" class="column">
             <h2>
         studios
       </h2>
@@ -54,7 +54,7 @@
             </nav>
         </div>
 
-        <div id="right-column">
+        <div id="right-column" class="column">
             <h2>
           project
         </h2>
