--- a/studio2/index.html
+++ b/studio2/index.html
@@ -3,71 +3,71 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>mansplained</title>
+    <title>Mansplain Generator</title>
     <link href="style.css" rel="stylesheet" />
     <script src='script.js' type="text/javascript"></script>
 </head>
 
 <body>
 
+    <div id="man">
+        <img width="400" height="521" src="images/man.png" alt="man">
+    </div>
+
     <header>
-        <h1>
-        mansplained
-        </h1>
+        <h1>Mansplain Generator</h1>
+        <h2>  <img src="images/yellowsparkles.gif" width="38" height="41" alt="sparkles">for a better understanding <img src="images/yellowsparkles.gif" width="38" height="41" alt="sparkles"></h2>
     </header>
 
-    <nav>navigation here! some links and the portal</nav>
+    <article>
+        <form name="f">
+            <div class="field">
+                <label class="question">your favorite axe body spray product</label><br>
+                <input type="radio" name="axe" value="axe spiked-up look day long glue" checked> axe spiked-up look day long glue<br>
+                <input type="radio" name="axe" value="axe tobacco and amber deoderant stick"> axe tobacco and amber deoderant stick<br>
+                <input type="radio" name="axe" value="axe dark temptation daily fragrance"> axe dark temptation daily fragrance
+            </div>
 
-    <main>
+            <div class="field">
+                <label class="question">which movie are you allowed to cry watching?</label><br>
+                <input type="radio" name="cry" value="Shawshank Redemption" checked> Shawshank Redemption<br>
+                <input type="radio" name="cry" value="Braveheart"> Braveheart<br>
+                <input type="radio" name="cry" value="Dead Poets Society"> Dead Poets Society
+            </div>
 
-        <article>
-            <form name="f">
-                <div>
-                    <label>the food your mom made you eat against your will</label>
-                    <input type="text" name="food">
-                </div>
+            <div class="field">
+                <label class="question">the best sport</label>
+                <input type="text" name="sport">
+            </div>
 
-                <div>
-                    <label>your most prized pokemon card</label>
-                    <input type="text" name="pokemon">
-                </div>
+            <div class="field">
+                <label class="question">your favoite car</label>
+                <input type="text" name="car">
+            </div>
 
-                <div>
-                    <label>the sport that you would never excell at</label>
-                    <input type="text" name="sport">
-                </div>
+            <div class="field">
+                <label class="question">your favoite dave matthews band song</label>
+                <input type="text" name="song">
+            </div>
 
-                <div>
-                    <label>your favoite car</label>
-                    <input type="text" name="car">
-                </div>
+            <input type="reset" value="RESET" />
+            <input type="submit" value="SUBMIT" />
 
-                <div>
-                    <label>your favoite dave matthews band song</label>
-                    <input type="text" name="song">
-                </div>
+        </form>
+    </article>
 
-                <!--add a div with label and text input with name=userColor-->
-
-                <input type="reset" value="reset" />
-                <input type="submit" value="submit" />
-                <p id="myMsg">
-                </p>
-
-            </form>
-        </article>
-
-
-    </main>
-
-    <aside>
-        a funny picture
-    </aside>
+    <div id="message">
+        <p id="myMsg"></p>
+    </div>
 
     <footer>
-        <a href="https://validator.w3.org/check?uri=referer">Valid HTML 5</a>
-        <a href="https://jigsaw.w3.org/css-validator/check/referer">Valid CSS</a>
+        <a href="https://github.com/dartab/des157">Github</a> |
+        <a href="https://validator.w3.org/check?uri=referer">Valid HTML 5</a> |
+        <a href="https://jigsaw.w3.org/css-validator/check/referer">Valid CSS</a> |
+        <a href="mailto:dptaback@ucdavis.edu">Email</a> |
+        <a href="../index.html">Portal</a>
     </footer>
+    
 </body>
 
 </html>
