--- a/studio2/index.html
+++ b/studio2/index.html
@@ -22,31 +22,31 @@
     <article>
         <form name="f">
             <div class="field">
-                <label class="question">your favorite axe body spray product</label><br>
+                <label><h3>your favorite axe body spray product</h3></label>
                 <input type="radio" name="axe" value="axe spiked-up look day long glue" checked> axe spiked-up look day long glue<br>
                 <input type="radio" name="axe" value="axe tobacco and amber deoderant stick"> axe tobacco and amber deoderant stick<br>
                 <input type="radio" name="axe" value="axe dark temptation daily fragrance"> axe dark temptation daily fragrance
             </div>
 
             <div class="field">
-                <label class="question">which movie are you allowed to cry watching?</label><br>
+                <label><h3>which movie are you allowed to cry watching?</h3></label>
                 <input type="radio" name="cry" value="Shawshank Redemption" checked> Shawshank Redemption<br>
                 <input type="radio" name="cry" value="Braveheart"> Braveheart<br>
                 <input type="radio" name="cry" value="Dead Poets Society"> Dead Poets Society
             </div>
 
             <div class="field">
-                <label class="question">the best sport</label>
+                <label><h3>the best sport</h3></label>
                 <input type="text" name="sport">
             </div>
 
             <div class="field">
-                <label class="question">your favoite car</label>
+                <label><h3>your favoite car</h3></label>
                 <input type="text" name="car">
             </div>
 
             <div class="field">
-                <label class="question">your favoite dave matthews band song</label>
+                <label><h3>your favoite dave matthews band song</h3></label>
                 <input type="text" name="song">
             </div>
 
@@ -67,7 +67,7 @@
         <a href="mailto:dptaback@ucdavis.edu">Email</a> |
         <a href="../index.html">Portal</a>
     </footer>
-    
+
 </body>
 
 </html>
