--- a/studio2/index.html
+++ b/studio2/index.html
@@ -65,7 +65,8 @@
         <a href="https://validator.w3.org/check?uri=referer">Valid HTML 5</a> |
         <a href="https://jigsaw.w3.org/css-validator/check/referer">Valid CSS</a> |
         <a href="mailto:dptaback@ucdavis.edu">Email</a> |
-        <a href="../index.html">Portal</a>
+        <a href="../index.html">Portal</a> |
+        <a href="http://s361.photobucket.com/user/crackysparkles/media/sparkles/sparkle2.gif.html">Sparkle Source</a>
     </footer>
 
 </body>
