--- a/studio2/index.html
+++ b/studio2/index.html
@@ -41,7 +41,7 @@
             </div>
 
             <div class="field">
-                <h3>your favoite car</h3>
+                <h3>your favorite car</h3>
                 <input type="text" name="car">
             </div>
 
