--- a/studio2/index.html
+++ b/studio2/index.html
@@ -46,7 +46,7 @@
             </div>
 
             <div class="field">
-                <h3>your favoite dave matthews band song</h3>
+                <h3>your favorite dave matthews band song</h3>
                 <input type="text" name="song">
             </div>
 
