--- a/studio2/index.html
+++ b/studio2/index.html
@@ -16,7 +16,7 @@
 
     <header>
         <h1>Mansplain Generator</h1>
-        <h2>  <img src="images/yellowsparkles.gif" width="38" height="41" alt="sparkles">for a better understanding <img src="images/yellowsparkles.gif" width="38" height="41" alt="sparkles"></h2>
+        <h2>  <img src="images/yellowsparkles.gif" width="38" height="41" alt="sparkles">for a better understanding<img src="images/yellowsparkles.gif" width="38" height="41" alt="sparkles"></h2>
     </header>
 
     <article>
@@ -24,12 +24,12 @@
             <div class="field">
                 <h3>your favorite axe body spray product</h3>
                 <input type="radio" name="axe" value="axe spiked-up look day long glue" checked> axe spiked-up look day long glue<br>
-                <input type="radio" name="axe" value="axe tobacco and amber deoderant stick"> axe tobacco and amber deoderant stick<br>
+                <input type="radio" name="axe" value="axe tobacco and amber deoderant stick"> axe tobacco and amber deoderant<br>
                 <input type="radio" name="axe" value="axe dark temptation daily fragrance"> axe dark temptation daily fragrance
             </div>
 
             <div class="field">
-                <h3>which movie are you allowed to cry watching?</h3>
+                <h3>which movie are you allowed to cry while watching?</h3>
                 <input type="radio" name="cry" value="Shawshank Redemption" checked> Shawshank Redemption<br>
                 <input type="radio" name="cry" value="Braveheart"> Braveheart<br>
                 <input type="radio" name="cry" value="Dead Poets Society"> Dead Poets Society
