--- a/studio2/index.html
+++ b/studio2/index.html
@@ -22,7 +22,7 @@
     <article>
         <form name="f">
             <div class="field">
-                <h3>your favorite axe body spray product</h3>
+                <h3>your favorite axe product</h3>
                 <input type="radio" name="axe" value="axe spiked-up look day long glue" checked> axe spiked-up look day long glue<br>
                 <input type="radio" name="axe" value="axe tobacco and amber deoderant stick"> axe tobacco and amber deoderant<br>
                 <input type="radio" name="axe" value="axe dark temptation daily fragrance"> axe dark temptation daily fragrance
