--- a/studio2/index.html
+++ b/studio2/index.html
@@ -29,7 +29,7 @@
             </div>
 
             <div class="field">
-                <h3>at which movie are you allowed to cry while watching?</h3>
+                <h3>which movie are you allowed to cry at while watching?</h3>
                 <input type="radio" name="cry" value="Shawshank Redemption" checked> Shawshank Redemption<br>
                 <input type="radio" name="cry" value="Braveheart"> Braveheart<br>
                 <input type="radio" name="cry" value="Dead Poets Society"> Dead Poets Society
