--- a/project/process/comparative.html
+++ b/project/process/comparative.html
@@ -32,7 +32,7 @@
             <h2>
       comparative research: fungiculture and womazine
     </h2>
-            <p><b>Fungiculture Journal: A Psychedelic Journal for Cultural Studies</b> is a webzine created by a collaboration of writers and artists. It is simply designed, with a retro, Deathjournal-like sparkling cursor. As indicated by its title, the zine’s
+            <p><b>Fungiculture Journal: A Psychedelic Journal for Cultural Studies</b> is a webzine created by a collaboration of writers and artists. It is simply designed, with a retro, Deadjournal-like sparkling cursor. As indicated by its title, the zine’s
                 mission is to be "comfortable being laboratory, greenhouse; the emphasis falls on seeing what can grow, and caring for it.” It serves as both a journal and a curation of digital art projects. Its content includes poetry, essays, graphics,
                 accompanying experimental music, videos, and gifs. One issue that I find particularly interesting displays a series of horizontally scrolling animated gifs that present themselves as a kind of stop-motion movie slideshow (pictured below),
                 showcasing the Philadelphia Flower Show. I love the projects incorporated on this site, for they are extremely experimental and abstract, with short artist statements that leave much room up to the viewer for interpretation. The issues also
