--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
                 <ul>
                     <li><a href="project/process/topic.html">Topic brainstorm</a></li>
                     <li><a href="project/process/comparative.html">Comparative research</a></li>
+                    <li><a href="project/process/topicchoice.html">Topic choice</a></li>
                 </ul>
             </nav>
         </div>
