--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
             <nav>
                 <ol>
                     <li><a href="blog/index.html">Blog</a></li>
-                    <li><a href="studio2/index.html">Mad Libs 2.0</a></li>
-                    <li><a href="#">Pocket full of interface</a></li>
+                    <li><a href="studio2/index.html">Mansplain Generator</a></li>
+                    <li><a href="studio3/index.html">All About Ziggy</a></li>
                     <li><a href="#">Time is on my side</a></li>
                     <li><a href="#">The library</a></li>
                 </ol>
