--- a/studio3/index.html
+++ b/studio3/index.html
@@ -6,7 +6,7 @@
     <title>all about ziggy</title>
     <link href="style.css" rel="stylesheet" />
     <script src='script.js' type="text/javascript"></script>
-    <link href="https://fonts.googleapis.com/css?family=Hammersmith+One|Questrial" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Hammersmith+One" rel="stylesheet">
 </head>
 
 <body>
