--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     <li><a href="bookex/looping.html">Ch 2-Looping</a></li>
                     <li><a href="bookex/minimum.html">Ch 3-Minimum</a></li>
                     <li><a href="bookex/sum.html">Ch 4-The Sum of a Range</a></li>
-                    <li><a href="#">Ch 14-Mouse Trail</a></li>
+                    <li><a href="bookex/mouse.html">Ch 14-Mouse Trail</a></li>
 
                 </ul>
             </nav>
