--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
                     <li><a href="project/process/topic.html">Topic brainstorm</a></li>
                     <li><a href="project/process/comparative.html">Comparative research</a></li>
                     <li><a href="project/process/topicchoice.html">Topic choice</a></li>
+                    <li><a href="project/process/research.html">Research</a></li>
                 </ul>
             </nav>
         </div>
