--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     <li><a href="blog/index.html">Blog</a></li>
                     <li><a href="studio2/index.html">Mansplain Generator</a></li>
                     <li><a href="studio3/index.html">All About Ziggy</a></li>
-                    <li><a href="#">Time is on my side</a></li>
+                    <li><a href="studio4/index.html">Virtual Psychic</a></li>
                     <li><a href="#">The library</a></li>
                 </ol>
             </nav>
