--- a/studio4/index.html
+++ b/studio4/index.html
@@ -34,7 +34,7 @@
 
 
             <div id="starContainer">
-          <div id='star'><img src="images/star.png"></div></div>
+          <div id='star'><img src="images/star.png" width="20" height="20" alt="star"></div></div>
 
         </div>
     </main>
