--- a/studio5/index.html
+++ b/studio5/index.html
@@ -11,7 +11,7 @@
 <body onload="init();">
 
 	<header>
-		<img src="images/title.png">
+		<img src="images/title.png" width="900" height="321" alt="title">
 	</header>
 
 	<div id="content">
