--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
                     <li><a href="project/process/topicchoice.html">Topic choice</a></li>
                     <li><a href="project/process/research.html">Research</a></li>
                     <li><a href="project/ISEA_2017_Application.pdf">Project </a></li>
+                    <li><a href="project/process/needfinding.pdf">Needfinding</a></li>
                     <li><a href="project/process/moodboards.pdf">Visual research</a></li>
                     <li><a href="project/process/audience.pdf">Audience</a></li>
                     <li><a href="project/process/userGoals.pdf">User goals</a></li>
