--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
                     <li><a href="project/process/moodboards.pdf">Visual research</a></li>
                     <li><a href="project/process/audience.pdf">Audience</a></li>
                     <li><a href="project/process/userGoals.pdf">User goals</a></li>
+                    <li><a href="project/process/storyboards.pdf">Storyboards</a></li>
                 </ul>
             </nav>
         </div>
