--- a/index.html
+++ b/index.html
@@ -70,6 +70,8 @@
                     <li><a href="project/process/audience.pdf">Audience</a></li>
                     <li><a href="project/process/userGoals.pdf">User goals</a></li>
                     <li><a href="project/process/storyboards.pdf">Storyboards</a></li>
+                    <li><a href="project/process/paperPrototype.html">Paper Prototype</a></li>
+
                 </ul>
             </nav>
         </div>
