--- a/index.html
+++ b/index.html
@@ -71,6 +71,10 @@
                     <li><a href="project/process/userGoals.pdf">User goals</a></li>
                     <li><a href="project/process/storyboards.pdf">Storyboards</a></li>
                     <li><a href="project/process/paperPrototype.html">Paper Prototype</a></li>
+                    <li><a href="project/process/siteflow.png">Site Flow</a></li>
+                    <li><a href="project/process/userflow.png">User Flow</a></li>
+                    <li><a href="project/process/wireframe.png">Wireframe</a></li>
+
 
                 </ul>
             </nav>
