--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                     <li><a href="project/process/comparative.html">Comparative research</a></li>
                     <li><a href="project/process/topicchoice.html">Topic choice</a></li>
                     <li><a href="project/process/research.html">Research</a></li>
-                    <li><a href="project/ISEA_2017_Application.pdf">Project </a></li>
+                    <li><a href="project/process/ISEA_2017_Application.pdf">Project </a></li>
                     <li><a href="project/process/needfinding.pdf">Needfinding</a></li>
                     <li><a href="project/process/moodboards.pdf">Visual research</a></li>
                     <li><a href="project/process/audience.pdf">Audience</a></li>
@@ -74,7 +74,7 @@
                     <li><a href="project/process/images/siteflow.png">Site Flow</a></li>
                     <li><a href="project/process/images/userflow.png">User Flow</a></li>
                     <li><a href="project/process/images/wireframe.png">Wireframe</a></li>
-
+                    <li><a href="project/process/proto1/index.html">Prototype 1</a></li>
 
                 </ul>
             </nav>
