--- a/index.html
+++ b/index.html
@@ -75,7 +75,9 @@
                     <li><a href="project/process/images/userflow.png">User Flow</a></li>
                     <li><a href="project/process/images/wireframe.png">Wireframe</a></li>
                     <li><a href="project/process/proto1/index.html">Prototype 1</a></li>
-
+                    <li><a href="project/process/comps.pdf">Comps</a></li>
+                    <li><a href="project/process/images/styleTile.png">Style Tile</a></li>
+                    <li><a href="project/process/proto2/index.html">Prototype 2</a></li>
                 </ul>
             </nav>
         </div>
