--- a/index.html
+++ b/index.html
@@ -70,13 +70,13 @@
                     <li><a href="project/process/audience.pdf">Audience</a></li>
                     <li><a href="project/process/userGoals.pdf">User goals</a></li>
                     <li><a href="project/process/storyboards.pdf">Storyboards</a></li>
-                    <li><a href="project/process/paperPrototype.html">Paper Prototype</a></li>
-                    <li><a href="project/process/images/siteflow.png">Site Flow</a></li>
-                    <li><a href="project/process/images/userflow.png">User Flow</a></li>
+                    <li><a href="project/process/paperPrototype.html">Paper prototype</a></li>
+                    <li><a href="project/process/images/siteflow.png">Site flow</a></li>
+                    <li><a href="project/process/images/userflow.png">User flow</a></li>
                     <li><a href="project/process/images/wireframe.png">Wireframe</a></li>
                     <li><a href="project/process/proto1/index.html">Prototype 1</a></li>
                     <li><a href="project/process/comps.pdf">Comps</a></li>
-                    <li><a href="project/process/images/styleTile.png">Style Tile</a></li>
+                    <li><a href="project/process/images/styleTile.png">Style tile</a></li>
                     <li><a href="project/process/proto2/index.html">Prototype 2</a></li>
                 </ul>
             </nav>
