--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                     <li><a href="project/process/images/wireframe.png">Wireframe</a></li>
                     <li><a href="project/process/proto1/index.html">Prototype 1</a></li>
                     <li><a href="project/process/comps.pdf">Comps</a></li>
-                    <li><a href="project/process/images/styleTile.png">Style tile</a></li>
+                    <li><a href="project/process/images/styleTile.pdf">Style tile</a></li>
                     <li><a href="project/process/proto2/index.html">Prototype 2</a></li>
                 </ul>
             </nav>
