--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
                     <li><a href="project/process/comps.pdf">Comps</a></li>
                     <li><a href="project/process/styleTile.pdf">Style tile</a></li>
                     <li><a href="project/process/proto2/index.html">Prototype 2</a></li>
+                    <li><a href="project/process/proto3/index.html">Prototype 3</a></li>
                 </ul>
             </nav>
         </div>
