--- a/project/process/proto3/index.html
+++ b/project/process/proto3/index.html
@@ -5,13 +5,14 @@
     <meta charset="UTF-8">
     <title>Alien WebMD</title>
     <link href="style.css" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Inconsolata" rel="stylesheet">
     <script src='script.js' type="text/javascript"></script>
 </head>
 
 <body>
 
   <header id="top">
-      <a href="index.html"><img class="header" width="634" height="149" src="images/title.png"></a>
+      <a href="index.html"><img class="header" width="600" height="135" src="images/title1.png"></a>
 
 
 
@@ -36,7 +37,7 @@
 
 
         <div id="checker">
-                <h3>Symptom Checker</h3>
+                <h3>symptom<b>checker</b></h3>
             <nav class="symcheck">
                 <ul class="symcheck">
                     <li class="symcheck">Choose Body Part</li>
@@ -47,10 +48,21 @@
             <img class="alien" width="161" height="298" src="images/alien.png">
         </div>
 
-<h2 id="about">About</h2>
+<h2 id="about">about Alien WebMD</h2>
 <p class="about">
-  About this zine
-</p>
+  Alien	WebMD is	an Internet	zine	that	visually	expresses a	collective consciousness about
+  various	topics,	mediated	through	the	unique	and	self-referential	language	and
+  framework	of	the	Internet,	using illustrations,	audio,	gifs,	memes,	video,	prose,	popups,
+  essays,	and	images	collaged	together.	The	zine further explores	virtual	renditions	of	real
+  and	imagined	places	as	interpreted through	the lens	of	DIY	web	technology,	and	invites
+  a	non-hierarchical exploration of	interactive	webpages.	The	zine’s	issues	are	generated
+  by	the	collective	efforts	of	digital	artists	whose work	is	based	on	a	unifying theme.	In	a
+  world	in	which	our	perceptions	are	constantly	informed	by	the	technologies	we	use,	our
+  memories	are	created	by	the	way	we	curate	lives	over	Internet	media.	This	zine	serves
+  as	a	sort	of	memory	archive,	collective	journal,	and	exercise	in	digital world	building,
+  with	a	nod	to	a	pre-Web	2.0	ethos. In	this	respect,	Alien	WebMD	showcases	an
+  intellectual	and	artistic heritage	of	media	in	a	global,	amorphous, yet	distinct and
+  celebrated place:	the	web.</p>
 
 
 
