--- a/project/process/proto3/index.html
+++ b/project/process/proto3/index.html
@@ -72,6 +72,7 @@
 
         <h2 id="about">about Alien WebMD</h2>
         <div class="text">
+      <iframe width="777" height="437" src="https://www.youtube.com/embed/UmSVlOFbDRk" frameborder="0" allowfullscreen></iframe>
             <p>
                 Alien WebMD is an Internet zine that visually expresses a collective consciousness about various topics, mediated through the unique and self-referential language and framework of the Internet, using illustrations, audio, gifs, memes, video, prose, popups,
                 essays, and images collaged together. The zine further explores virtual renditions of real and imagined places as interpreted through the lens of DIY web technology, and invites a non-hierarchical exploration of interactive webpages. The
