--- a/project/process/proto3/index.html
+++ b/project/process/proto3/index.html
@@ -54,17 +54,17 @@
                     <p>click a body part to figure out what could be wrong with you!</p>
                 </aside>
 
-                <div id="close">
+                <!-- <div id="close"> -->
                     <aside class="alien" id="aboutalienhead">
                         <p>confused and nihilistic</p>
                     </aside>
-                </div>
+                <!-- </div> -->
 
-                <div id="close1">
+                <!-- <div id="close1"> -->
                     <aside class="alien" id="aboutalienbody">
                         <p>google search is your therapist</p>
                     </aside>
-                </div>
+                <!-- </div> -->
 
             </div>
 
