--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
                     <li><a href="project/process/proto2/index.html">Prototype 2</a></li>
                     <li><a href="project/process/proto3/index.html">Prototype 3</a></li>
                     <li><a href="project/process/audienceTest.html">Audience test</a></li>
+                    <li><a href="project/process/audienceTestResults.html">Audience test results</a></li>
                 </ul>
             </nav>
         </div>
