--- a/project/final/contact.html
+++ b/project/final/contact.html
@@ -11,40 +11,55 @@
 
 <body>
 
-  <header id="top">
-      <a href="index.html"><img class="header" width="600" height="135" src="images/title1.png"></a>
-
-
-
-
-<div id="navbg">
-    <nav class="main">
-        <ul>
-            <li><a href="issue2/index.html" target="_blank">current issue</a></li>
-            <li><a href="archive.html">archive</a></li>
-            <li><a href="upcoming.html">upcoming</a></li>
-            <li><a href="freeforall.html">free-for-all</a></li>
-            <li><a href="index.html#about">about</a></li>
-            <li><a class="currenttab" href="contact.html">contact</a></li>
-            <li><a href="submitart.html">submit art</a></li>
-        </ul>
-    </nav>
-</div>
-    <div id="navline">
-    </div>
+    <header id="top">
+      <a href="index.html"><img class="header" width="500" height="145" src="images/title.png"></a>
+        <div id="navbg">
+            <nav class="main">
+                <ul>
+                    <li><a href="index.html">home</a></li>
+                    <li><a href="about.html">about</a></li>
+                    <li><a href="issue2/index.html">current issue</a></li>
+                    <li><a href="archive.html">archive</a></li>
+                    <li><a href="freeforall.html">free-for-all</a></li>
+                    <li><a class="currenttab" href="contact.html">contact</a></li>
+                    <li><a href="submitart.html">submit art</a></li>
+                </ul>
+            </nav>
+        </div>
+        <div id="navline">
+        </div>
     </header>
-  <main>
+    <main>
 
-<h2>contact</h2>
-<div class="text">
-Contact us with submissions, questions and suggestions at <a href="mailto:alienwebmd@gmail.com">alienwebmd@gmail.com</a>.
-</div>
+        <h2>contact</h2>
+        <div class="text">
+            <h6>Contact us with submissions, questions and suggestions at <a href="mailto:alienwebmd@gmail.com">alienwebmd@gmail.com</a>.</h6>
+         <div id="contactimg"><img src="images/contact.png" class="contact" width="150" height="150" alt="contact"><br>
+              <a href="http://sashaflamm.com">Sasha</a> & <a href="http://dariataback.com">Daria</a></div>
+                <a href="submitart.html#submit">Submitting art</a>? Please include:<br><br>
+1. Your name<br>
+                  2. Your contact information (an email address)<br>
+                  3. Your submission type: image, video, audio, writing, etc.<br>
+                  4. A description of your work<br>
+
+                  <br>
+                  <br>
 
 
-      </main>
-      <footer>
-        social media // contact // <a href="#top">back to top</a>
-      </footer>
+        </div>
+
+
+
+
+    </main>
+    <footer>
+        <a href="#top">back to top</a><br><br>
+        <p class="smallfont"><a href="https://github.com/dartab/des157">github</a> |
+            <a href="https://validator.w3.org/check?uri=referer">valid HTML 5</a> |
+            <a href="https://jigsaw.w3.org/css-validator/check/referer">valid CSS</a> |
+            <a href="mailto:dptaback@ucdavis.edu">email</a> |
+            <a href="../index.html">portal</a></p>
+    </footer>
 </body>
 
 </html>
