--- a/project/final/freeforall.html
+++ b/project/final/freeforall.html
@@ -12,19 +12,18 @@
 <body>
 
   <header id="top">
-      <a href="index.html"><img class="header" width="600" height="135" src="images/title1.png"></a>
-
+      <a href="index.html"><img class="header" width="500" height="145" src="images/title.png"></a>
 
 
 
 <div id="navbg">
     <nav class="main">
         <ul>
-            <li><a href="issue2/index.html" target="_blank">current issue</a></li>
+          <li><a href="index.html">home</a></li>
+          <li><a href="about.html">about</a></li>
+            <li><a href="issue2/index.html">current issue</a></li>
             <li><a href="archive.html">archive</a></li>
-            <li><a href="upcoming.html">upcoming</a></li>
             <li><a class="currenttab" href="freeforall.html">free-for-all</a></li>
-            <li><a href="index.html#about">about</a></li>
             <li><a href="contact.html">contact</a></li>
             <li><a href="submitart.html">submit art</a></li>
         </ul>
@@ -44,7 +43,12 @@ In progress: a real-time collage. Check back soon!
 
       </main>
       <footer>
-        social media // contact // <a href="#top">back to top</a>
+          <a href="#top">back to top</a><br><br>
+          <p class="smallfont"><a href="https://github.com/dartab/des157">github</a> |
+              <a href="https://validator.w3.org/check?uri=referer">valid HTML 5</a> |
+              <a href="https://jigsaw.w3.org/css-validator/check/referer">valid CSS</a> |
+              <a href="mailto:dptaback@ucdavis.edu">email</a> |
+              <a href="../index.html">portal</a></p>
       </footer>
 </body>
 
