--- a/project/final/issue1/index.html
+++ b/project/final/issue1/index.html
@@ -3,48 +3,34 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Virtual Psychic</title>
+    <title>Alien WebMD</title>
     <link href="style.css" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Inconsolata" rel="stylesheet">
     <script src='script.js' type="text/javascript"></script>
-    <link href="https://fonts.googleapis.com/css?family=Hammersmith+One" rel="stylesheet">
 </head>
 
 <body>
-    <main>
-        <div id="mainContainer">
 
-          <div id="stopAnimation">
-            <img width="1059" height="814" src="images/virtualpsychic.png" alt="virtual psychic">
-          </div>
-
-            <div id="psychic">
-                <img id="kate" src="images/psychic.png" width="580" height="747" alt="psychic" />
-                <div class='psychicTip' id="psychicTip">Hello — I'm your psychic, Kate Bush</div>
-            </div>
-
-            <div id="ball">
-                <img src="images/crystalball.png" width="276" height="273" alt="crystalball" id="crystalball"/>
-                <div class='ballTip' id="ballTip">Let me tell you your fortune!</div>
-            </div>
-
-            <div id="drink">
-                <img src="images/elixir.png" width="40" height="59" alt="elixir" id="elixir" />
-                <div class='drinkTip' id="drinkTip">Drink this...</div>
-            </div>
-
-
-            <div id="starContainer">
-          <div id='star'><img src="images/star.png" width="20" height="20" alt="star"></div></div>
-
-        </div>
-    </main>
+  <header id="top">
+      <a href="../index.html"><img class="header" width="239" height="40" src="images/alien_text_logo.png"></a>
 
 
 
-    <footer>
-        <a href="../index.html">Alien WebMD Home</a>
-    </footer>
+    <div id="navline">
+    </header>
 
+
+<iframe width="1350" height=900" src="katebush/index.html"></iframe>
+
+
+      <footer>
+          <a href="../index.html">back home</a><br><br>
+          <p class="smallfont"><a href="https://github.com/dartab/des157">github</a> |
+              <a href="https://validator.w3.org/check?uri=referer">valid HTML 5</a> |
+              <a href="https://jigsaw.w3.org/css-validator/check/referer">valid CSS</a> |
+              <a href="mailto:dptaback@ucdavis.edu">email</a> |
+              <a href="../index.html">portal</a></p>
+      </footer>
 </body>
 
 </html>
