--- a/project/final/issue2/index.html
+++ b/project/final/issue2/index.html
@@ -3,67 +3,34 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Mansplain Generator</title>
+    <title>Alien WebMD</title>
     <link href="style.css" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Inconsolata" rel="stylesheet">
     <script src='script.js' type="text/javascript"></script>
 </head>
 
 <body>
 
-    <div id="man">
-        <img width="400" height="521" src="images/man.png" alt="man">
-    </div>
+  <header id="top">
+      <a href="../index.html"><img class="header" width="239" height="40" src="images/alien_text_logo.png"></a>
 
-    <header>
-        <h1>Mansplain Generator</h1>
-        <h2>  <img src="images/yellowsparkles.gif" width="38" height="41" alt="sparkles">for a better understanding<img src="images/yellowsparkles.gif" width="38" height="41" alt="sparkles"></h2>
+
+
+    <div id="navline">
     </header>
 
-    <article>
-        <form name="f">
-            <div class="field">
-                <h3>your favorite axe product</h3>
-                <input type="radio" name="axe" value="axe spiked-up look day long glue" checked> axe spiked-up look day long glue<br>
-                <input type="radio" name="axe" value="axe tobacco and amber deoderant stick"> axe tobacco and amber deoderant<br>
-                <input type="radio" name="axe" value="axe dark temptation daily fragrance"> axe dark temptation daily fragrance
-            </div>
 
-            <div class="field">
-                <h3>at which movie are you allowed to cry while watching?</h3>
-                <input type="radio" name="cry" value="Shawshank Redemption" checked> Shawshank Redemption<br>
-                <input type="radio" name="cry" value="Braveheart"> Braveheart<br>
-                <input type="radio" name="cry" value="Dead Poets Society"> Dead Poets Society
-            </div>
+<iframe width="900" height=650" src="mansplain/index.html"></iframe>
 
-            <div class="field">
-                <h3>the best sport</h3>
-                <input type="text" name="sport">
-            </div>
 
-            <div class="field">
-                <h3>your favorite car</h3>
-                <input type="text" name="car">
-            </div>
-
-            <div class="field">
-                <h3>your favorite dave matthews band song</h3>
-                <input type="text" name="song">
-            </div>
-
-            <input type="reset" value="RESET" />
-            <input type="submit" value="SUBMIT" />
-
-        </form>
-    </article>
-
-    <div id="message">
-        <p id="myMsg"></p>
-    </div>
-
-    <footer>
-        <a href="../index.html">Alien WebMD Home</a>
-    </footer>
-
+      <footer>
+          <a href="../index.html">back home</a><br><br>
+          <p class="smallfont"><a href="https://github.com/dartab/des157">github</a> |
+              <a href="https://validator.w3.org/check?uri=referer">valid HTML 5</a> |
+              <a href="https://jigsaw.w3.org/css-validator/check/referer">valid CSS</a> |
+              <a href="mailto:dptaback@ucdavis.edu">email</a> |
+              <a href="../index.html">portal</a></p>
+      </footer>
 </body>
 
 </html>
