--- a/project/final/submitart.html
+++ b/project/final/submitart.html
@@ -12,18 +12,18 @@
 <body>
 
     <header id="top">
-        <a href="index.html"><img class="header" width="600" height="135" src="images/title1.png"></a>
-
+      <a href="index.html"><img class="header" width="500" height="145" src="images/title.png"></a>
 
 
 
         <div id="navbg">
             <nav class="main">
                 <ul>
-                    <li><a href="issue2/index.html" target="_blank">current issue</a></li>
+                  <li><a href="index.html">home</a></li>
+                  <li><a href="about.html">about</a></li>
+                    <li><a href="issue2/index.html">current issue</a></li>
                     <li><a href="archive.html">archive</a></li>
                     <li><a href="freeforall.html">free-for-all</a></li>
-                    <li><a href="index.html#about">about</a></li>
                     <li><a href="contact.html">contact</a></li>
                     <li><a class="currenttab" href="submitart.html">submit art</a></li>
                 </ul>
@@ -39,13 +39,13 @@
         <h4>Issue #3: An enchanted interactive virtual hotspring</h4>
         <h5>Submissions due May 1, 2017</h5>
         <img src="images/hotspring.jpg" width="777" height="333">
-        <p>Interested in contributing? Please submit your artwork, poetry, essays, and other creative ideas <a href="submitart.html">here</a>! Submissions are due by May 1st.</p>
+        <p>We are interested in collecting images, video, audio, writings, and ideas for creating an zine issue that serves as a "virtual hotspring". We would like to bring together works that explore the occult, medidation, yoga in all scenarios, Esalen, and hot baths experiences. Whether hot springs gives you anxiety or a sense of peace an comfort, we would like to see your perspective. What would you like to see at a virtual hotspirng? Let us know and collaborate with us!</p>
        </div>
 
 
-        <h2>submit art</h2>
+        <h2 id="submit" >submit art</h2>
         <div class="text">
-            <p>Please <a href="contact.html">send us an email</a> with your information, and description of the work, and the attached work. <br><a href="contact.html">Contact us</a> or use the form below:</p>
+            <h6>Please <a href="contact.html">email us</a> with your information and an attachment of your artwork or use the form below:</h6>
 <div id="submitart">
             <form action="mailto:alienwebmd@gmail.com" method="post" enctype="text/plain">
 
@@ -54,7 +54,6 @@
 
                 <label id="email" for="email">Email</label>
                 <input type="text" id="email" name="email">
-
 
                 <label for="submissiontype">Submission Type</label>
                 <select id="submissiontype" name="submissiontype">
@@ -66,7 +65,7 @@
                   <option value="other">Other</option>
                 </select>
 
-                <label for="email">Describe your work</label>
+                <label for="email">Describe your work & how it relates to the theme</label>
                 <input type="text" id="work" name="work">
 
                 <input type="reset" value="Reset">
