--- a/project/final/index.html
+++ b/project/final/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html>
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
@@ -12,7 +12,7 @@
 <body>
 
     <header id="top">
-      <a href="index.html"><img class="header" width="500" height="145" src="images/title.png"></a>
+      <a href="index.html"><img class="header" width="500" height="145" src="images/title.png" alt="title"></a>
 
 
 
@@ -47,8 +47,8 @@
             </nav>
             <div id="alien">
                 <img width="170" height="302" src="images/alien.png">
-                <img src="images/alien_head_01.png" width="50" height="60" id="alienhead">
-                <img src="images/alien_body_01.png" width="170" height="247" id="alienbody">
+                <img src="images/alien_head_01.png" width="50" height="60" id="alienhead" alt="alienhead">
+                <img src="images/alien_body_01.png" width="170" height="247" id="alienbody" alt="alienbody">
 
                 <aside>
                     <p>click a body part to figure out what could be wrong with you!</p>
@@ -75,14 +75,14 @@
         <div class="text">
           <h4>Issue #3: An enchanted interactive virtual hotspring</h4>
           <h5>Submissions due May 1, 2017</h5>
-          <img src="images/hotspring.jpg" width="777" height="333">
+          <img src="images/hotspring.jpg" width="777" height="333" alt="hotspring">
           <p>Interested in contributing?</p>
-            <a href="submitart.html#submit"><button class="button">Submit Art!</button></a>
+            <button class="button"><a class="button" href="submitart.html#submit">Submit Art!</a></button>
          </div>
 
         <h2 id="about">about Alien WebMD</h2>
         <div class="text">
-            <iframe width="777" height="437" src="https://www.youtube.com/embed/UmSVlOFbDRk?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
+            <iframe width="777" height="437" src="https://www.youtube.com/embed/UmSVlOFbDRk?rel=0&amp;controls=0&amp;showinfo=0" allowfullscreen></iframe>
             <p>
                 Alien WebMD is an Internet zine that visually expresses a collective consciousness about various topics, mediated through the unique and self-referential language and framework of the Internet, using illustrations, audio, gifs, memes, video, prose, popups,
                 essays, and images collaged together. The zine further explores virtual renditions of real and imagined places as interpreted through the lens of DIY web technology, and invites a non-hierarchical exploration of interactive webpages. The
