--- a/project/final/index.html
+++ b/project/final/index.html
@@ -77,7 +77,7 @@
           <h5>Submissions due May 1, 2017</h5>
           <img src="images/hotspring.jpg" width="777" height="333" alt="hotspring">
           <p>Interested in contributing?</p>
-            <button class="button"><a class="button" href="submitart.html#submit">Submit Art!</a></button>
+          <a href="submitart.html#submit">  <button class="button">Submit Art!</button></a>
          </div>
 
         <h2 id="about">about Alien WebMD</h2>
