--- a/project/final/index.html
+++ b/project/final/index.html
@@ -46,7 +46,7 @@
                 </ul>
             </nav>
             <div id="alien">
-                <img width="170" height="302" src="images/alien.png">
+                <img width="170" height="302" src="images/alien.png" alt="alien">
                 <img src="images/alien_head_01.png" width="50" height="60" id="alienhead" alt="alienhead">
                 <img src="images/alien_body_01.png" width="170" height="247" id="alienbody" alt="alienbody">
 
@@ -77,7 +77,7 @@
           <h5>Submissions due May 1, 2017</h5>
           <img src="images/hotspring.jpg" width="777" height="333" alt="hotspring">
           <p>Interested in contributing?</p>
-          <a href="submitart.html#submit">  <button class="button">Submit Art!</button></a>
+          <form action="submitart.html"> <button>Submit Art!</button></form>
          </div>
 
         <h2 id="about">about Alien WebMD</h2>
