--- a/project/final/about.html
+++ b/project/final/about.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html>
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
@@ -11,7 +11,7 @@
 <body>
 
   <header id="top">
-      <a href="index.html"><img class="header" width="500" height="145" src="images/title.png"></a>
+      <a href="index.html"><img class="header" width="500" height="145" src="images/title.png" alt="title"></a>
 
 
 
@@ -36,7 +36,7 @@
 
     <h2 id="about">about Alien WebMD</h2>
     <div class="text">
-        <iframe width="777" height="437" src="https://www.youtube.com/embed/UmSVlOFbDRk?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
+        <iframe width="777" height="437" src="https://www.youtube.com/embed/UmSVlOFbDRk?rel=0&amp;controls=0&amp;showinfo=0" allowfullscreen></iframe>
         <p>
             Alien WebMD is an Internet zine that visually expresses a collective consciousness about various topics, mediated through the unique and self-referential language and framework of the Internet, using illustrations, audio, gifs, memes, video, prose, popups,
             essays, and images collaged together. The zine further explores virtual renditions of real and imagined places as interpreted through the lens of DIY web technology, and invites a non-hierarchical exploration of interactive webpages. The
@@ -45,10 +45,10 @@
             artistic heritage of media in a global, amorphous, yet distinct and celebrated place: the web.</p>
         <h6>Interested in particiapting? Check out our <a href="upcoming.html">upcoming issue theme</a>!</h6>  </div>
 
-    <h2 id="about">why "Alien WebMD"?</h2>
+    <h2>why "Alien WebMD"?</h2>
     <div class="text">
 
-            <iframe width="777" height="437" src="https://www.youtube.com/embed/qEmHg5-Pbxs?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
+            <iframe width="777" height="437" src="https://www.youtube.com/embed/qEmHg5-Pbxs?rel=0&amp;controls=0&amp;showinfo=0"  allowfullscreen></iframe>
             <p>
                     The internet is full of masochistic black holes. The name "Alien WebMD” merges two ideas that have caused paranoia or are linked to conspiracy theories and/or sel-doubt, perpetrated through digital networks. The “Web MD Symptom Checker" is an anxiety producing, speculative self-diagnostic tool, in which possible conditions can range from no real problems to fatal issues. Our zine titling and parody recreation of the Symptom Checker is an attempt to critique the potential masochistic absurdity of self-diagnostic tools on the Internet.</p>
 
