--- a/project/final/issue2/index.html
+++ b/project/final/issue2/index.html
@@ -12,15 +12,12 @@
 <body>
 
   <header id="top">
-      <a href="../index.html"><img class="header" width="239" height="40" src="images/alien_text_logo.png"></a>
-
-
-
-    <div id="navline">
+      <a href="../index.html"><img class="header" width="239" height="40" src="images/alien_text_logo.png" alt="logo"></a>
+    <div id="navline"></div>
     </header>
 
 
-<iframe width="900" height=650" src="mansplain/index.html"></iframe>
+<iframe width="900" height="650" src="mansplain/index.html"></iframe>
 
 
       <footer>
