--- a/project/final/contact.html
+++ b/project/final/contact.html
@@ -12,7 +12,7 @@
 <body>
 
     <header id="top">
-      <a href="index.html"><img class="header" width="500" height="145" src="images/title.png"></a>
+      <a href="index.html"><img class="header" width="500" height="145" src="images/title.png" alt="title"></a>
         <div id="navbg">
             <nav class="main">
                 <ul>
