--- a/project/final/submitart.html
+++ b/project/final/submitart.html
@@ -12,7 +12,7 @@
 <body>
 
     <header id="top">
-      <a href="index.html"><img class="header" width="500" height="145" src="images/title.png"></a>
+      <a href="index.html"><img class="header" width="500" height="145" src="images/title.png" alt="title"></a>
 
 
 
@@ -38,7 +38,7 @@
       <div class="text">
         <h4>Issue #3: An enchanted interactive virtual hotspring</h4>
         <h5>Submissions due May 1, 2017</h5>
-        <img src="images/hotspring.jpg" width="777" height="333">
+        <img src="images/hotspring.jpg" alt="hotspring" width="777" height="333">
         <p>We are interested in collecting images, video, audio, writings, and ideas for creating an zine issue that serves as a "virtual hotspring". We would like to bring together works that explore the occult, medidation, yoga in all scenarios, Esalen, and hot baths experiences. Whether hot springs gives you anxiety or a sense of peace an comfort, we would like to see your perspective. What would you like to see at a virtual hotspirng? Let us know and collaborate with us!</p>
        </div>
 
@@ -49,10 +49,10 @@
 <div id="submitart">
             <form action="mailto:alienwebmd@gmail.com" method="post" enctype="text/plain">
 
-                <label ="name" for="name">Name</label>
+                <label for="name">Name</label>
                 <input type="text" id="name" name="name">
 
-                <label id="email" for="email">Email</label>
+                <label for="email">Email</label>
                 <input type="text" id="email" name="email">
 
                 <label for="submissiontype">Submission Type</label>
