--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
                     <li><a href="project/process/proto3/index.html">Prototype 3</a></li>
                     <li><a href="project/process/audienceTest.html">Audience test</a></li>
                     <li><a href="project/process/audienceTestResults.html">Audience test results</a></li>
+                    <li><a href="project/final/index.html">Final</a></li>
                 </ul>
             </nav>
         </div>
